force-app/main/default/objects/Deployment_Task_Tracker__c/Deployment_Task_Tracker__c.object-meta.xml
<CustomObject>
    <label>Deployment Task Tracker</label>
    <nameField>
        <displayFormat>DTT-{000000}</displayFormat>
        <label>Deployment Task Tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deployment Task Trackers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>