force-app/main/default/objects/Deployment_Task_Tracker__c/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Environment</label>
    <referenceTo>copado__Environment__c</referenceTo>
    <relationshipLabel>Deployment Task Trackers</relationshipLabel>
    <relationshipName>Deployment_Task_Trackers</relationshipName>
    <type>Lookup</type>
</CustomField>