force-app/main/default/objects/Deployment_Task_Tracker__c/fields/Performed_by__c.field-meta.xml
<CustomField>
    <fullName>Performed_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Performed by the User</inlineHelpText>
    <label>Performed by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DTT_Performed_by</relationshipName>
    <type>Lookup</type>
</CustomField>